crates/ai/tests/snapshots/tool_outputs_parity__output_list_asset_taxonomies_unknown_taxonomy.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "err": "No asset-scoped taxonomy matched the requested taxonomy filter"
}
