crates/ai/tests/snapshots/tool_outputs_parity__output_prepare_asset_classification_ambiguous.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
assertion_line: 734
expression: result
---
{
  "ok": {
    "assetCandidates": [
      {
        "assetId": "asset-vt-xnas",
        "currency": "USD",
        "displayCode": "VT",
        "exchangeMic": "XNAS",
        "instrumentType": "EQUITY",
        "label": "VT - Vanguard Total World Stock Index Fund ETF Shares",
        "matchedBy": "candidate",
        "name": "Vanguard Total World Stock Index Fund ETF Shares",
        "symbol": "VT"
      },
      {
        "assetId": "asset-vt-arcx",
        "currency": "USD",
        "displayCode": "VT",
        "exchangeMic": "ARCX",
        "instrumentType": "EQUITY",
        "label": "VT - Vanguard Total World Stock Index Fund ETF Shares",
        "matchedBy": "candidate",
        "name": "Vanguard Total World Stock Index Fund ETF Shares",
        "symbol": "VT"
      }
    ],
    "assetQuery": "VT",
    "candidateCurrentAssignments": [
      {
        "assetId": "asset-vt-xnas",
        "changes": {
          "addCount": 1,
          "removeCount": 0,
          "unchangedCount": 0,
          "updateCount": 0
        },
        "currentAssignments": []
      },
      {
        "assetId": "asset-vt-arcx",
        "changes": {
          "addCount": 1,
          "removeCount": 0,
          "unchangedCount": 0,
          "updateCount": 0
        },
        "currentAssignments": []
      }
    ],
    "changes": {
      "addCount": 0,
      "removeCount": 0,
      "unchangedCount": 0,
      "updateCount": 0
    },
    "currentAssignments": [],
    "draftStatus": "needsAssetSelection",
    "proposedAssignments": [
      {
        "assignmentId": null,
        "categoryColor": "#64748b",
        "categoryId": "equity",
        "categoryKey": "equity",
        "categoryName": "Equity",
        "source": "ai",
        "sourceLabel": "Equity",
        "weightBasisPoints": 9000
      }
    ],
    "taxonomy": {
      "isSingleSelect": false,
      "name": "Asset Class",
      "taxonomyId": "asset-tax"
    },
    "unallocatedBasisPoints": 1000
  }
}
