crates/ai/tests/snapshots/tool_outputs_parity__output_prepare_asset_classification_duplicate_error.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
assertion_line: 731
expression: result
---
{
  "err": "Duplicate category ID 'equity'"
}
