crates/ai/tests/snapshots/tool_outputs_parity__output_record_activities_mixed.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "availableAccounts": [
      {
        "accountType": "SECURITIES",
        "currency": "USD",
        "id": "acc-1",
        "name": "Main Broker"
      }
    ],
    "drafts": [
      {
        "availableSubtypes": [],
        "draft": {
          "accountId": "acc-1",
          "accountName": "Main Broker",
          "activityDate": "2026-01-17",
          "activityType": "DEPOSIT",
          "amount": 1000.0,
          "assetId": null,
          "assetKind": null,
          "assetName": null,
          "currency": "USD",
          "exchangeMic": null,
          "fee": null,
          "instrumentType": null,
          "isCustomAsset": false,
          "notes": null,
          "priceSource": "none",
          "pricingMode": "MARKET",
          "providerId": null,
          "providerSymbol": null,
          "quantity": null,
          "quoteCcy": null,
          "subtype": null,
          "symbol": null,
          "tax": null,
          "unitPrice": null
        },
        "errors": [],
        "resolvedAsset": null,
        "rowIndex": 0,
        "validation": {
          "errors": [],
          "isValid": true,
          "missingFields": []
        }
      },
      {
        "availableSubtypes": [],
        "draft": {
          "accountId": "acc-1",
          "accountName": "Main Broker",
          "activityDate": "2026-01-17",
          "activityType": "DEPOSIT",
          "amount": null,
          "assetId": null,
          "assetKind": null,
          "assetName": null,
          "currency": "USD",
          "exchangeMic": null,
          "fee": null,
          "instrumentType": null,
          "isCustomAsset": false,
          "notes": null,
          "priceSource": "none",
          "pricingMode": "MARKET",
          "providerId": null,
          "providerSymbol": null,
          "quantity": null,
          "quoteCcy": null,
          "subtype": null,
          "symbol": null,
          "tax": null,
          "unitPrice": null
        },
        "errors": [
          "Missing required field: amount"
        ],
        "resolvedAsset": null,
        "rowIndex": 1,
        "validation": {
          "errors": [],
          "isValid": false,
          "missingFields": [
            "amount"
          ]
        }
      }
    ],
    "resolvedAssets": [],
    "validation": {
      "errorRows": 1,
      "totalRows": 2,
      "validRows": 1
    }
  }
}
