crates/ai/tests/snapshots/tool_outputs_parity__output_record_activity_deposit.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "availableAccounts": [
      {
        "accountType": "SECURITIES",
        "currency": "USD",
        "id": "acc-1",
        "name": "Main Broker"
      }
    ],
    "availableSubtypes": [],
    "draft": {
      "accountId": "acc-1",
      "accountName": "Main Broker",
      "activityDate": "2026-01-17",
      "activityType": "DEPOSIT",
      "amount": 5000.0,
      "assetId": null,
      "assetKind": null,
      "assetName": null,
      "currency": "USD",
      "exchangeMic": null,
      "fee": null,
      "instrumentType": null,
      "isCustomAsset": false,
      "notes": null,
      "priceSource": "none",
      "pricingMode": "MARKET",
      "providerId": null,
      "providerSymbol": null,
      "quantity": null,
      "quoteCcy": null,
      "subtype": null,
      "symbol": null,
      "tax": null,
      "unitPrice": null
    },
    "resolvedAsset": null,
    "validation": {
      "errors": [],
      "isValid": true,
      "missingFields": []
    }
  }
}
