crates/ai/tests/snapshots/tool_outputs_parity__output_record_activity_dividend_drip.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "availableAccounts": [
      {
        "accountType": "SECURITIES",
        "currency": "USD",
        "id": "acc-1",
        "name": "Main Broker"
      }
    ],
    "availableSubtypes": [
      {
        "label": "Dividend Reinvested (DRIP)",
        "value": "DRIP"
      },
      {
        "label": "Dividend in Kind",
        "value": "DIVIDEND_IN_KIND"
      }
    ],
    "draft": {
      "accountId": "acc-1",
      "accountName": "Main Broker",
      "activityDate": "2026-01-17",
      "activityType": "DIVIDEND",
      "amount": null,
      "assetId": null,
      "assetKind": null,
      "assetName": "VTI",
      "currency": "USD",
      "exchangeMic": null,
      "fee": null,
      "instrumentType": null,
      "isCustomAsset": true,
      "notes": null,
      "priceSource": "none",
      "pricingMode": "MARKET",
      "providerId": null,
      "providerSymbol": null,
      "quantity": 2.0,
      "quoteCcy": null,
      "subtype": "DRIP",
      "symbol": "VTI",
      "tax": null,
      "unitPrice": null
    },
    "resolvedAsset": null,
    "validation": {
      "errors": [],
      "isValid": false,
      "missingFields": [
        "unit_price",
        "asset_kind"
      ]
    }
  }
}
