crates/ai/tests/snapshots/tool_outputs_parity__output_search_activities.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accountScope": "all",
    "activities": [],
    "count": 0,
    "page": 1,
    "pageSize": 50,
    "totalPages": 0,
    "totalRowCount": 0
  }
}
